# cloud_research

./: README.md  analyze_data_density.py  file.py  guilde.txt  inspect_csv.py  main.py  model_comparison.py  predict_demo.py  pyproject.toml  requirements.txt  research_paper_draft.md  research_tables.md  results_and_discussion_draft.md  system_architecture_draft.md  system_model_draft.md
clustering/: __init__.py  cluster_analyzer.py  dbscan_clustering.py  kmeans_clustering.py
config/: config.py
evaluation/: __init__.py  baselines.py  experiments.py  metrics.py
models/: hybrid_predictor_models.joblib
prediction/: __init__.py  arima_predictor.py  hybrid_predictor.py  lstm_predictor.py
preprocessing/: __init__.py  aggregator.py  cleaner.py  data_loader.py  feature_engineering.py
results/: experiment_results_20260110_125901.json
results/model_comparison/: average_metrics.csv  model_comparison_metrics.csv
results/model_comparison/values/: machine_0000_values.csv  machine_0001_values.csv  machine_0002_values.csv  machine_0003_values.csv  machine_0004_values.csv  machine_0005_values.csv  machine_0006_values.csv  machine_0007_values.csv  machine_0008_values.csv  machine_0009_values.csv  machine_0010_values.csv  machine_0011_values.csv  machine_0012_values.csv  machine_0013_values.csv  machine_0014_values.csv  machine_0015_values.csv  machine_0016_values.csv  machine_0017_values.csv  machine_0018_values.csv  machine_0019_values.csv
scaling/: __init__.py  cost_model.py  scaling_policy.py
visualization/: __init__.py  plots.py
